logs/products.autocompletewidget.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/AutocompleteWidget'...
Listing './lib/python3.5/site-packages/Products/AutocompleteWidget/locales'...
Listing './lib/python3.5/site-packages/Products/AutocompleteWidget/locales/de'...
Listing './lib/python3.5/site-packages/Products/AutocompleteWidget/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/AutocompleteWidget/locales/es'...
Listing './lib/python3.5/site-packages/Products/AutocompleteWidget/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/AutocompleteWidget/locales/fr'...
Listing './lib/python3.5/site-packages/Products/AutocompleteWidget/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/AutocompleteWidget/profiles'...
Listing './lib/python3.5/site-packages/Products/AutocompleteWidget/profiles/default'...
Listing './lib/python3.5/site-packages/Products/AutocompleteWidget/skins'...
Listing './lib/python3.5/site-packages/Products/AutocompleteWidget/skins/actb_widget'...
Compiling './lib/python3.5/site-packages/Products/AutocompleteWidget/skins/actb_widget/atcb_separators.py'...
***   File "./lib/python3.5/site-packages/Products/AutocompleteWidget/skins/actb_widget/atcb_separators.py", line 11
    return str(separators)[1:-1]
                               ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products.AutocompleteWidget-1.5.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
